# Copyright 2021 IRT Saint Exupéry, https://www.irt-saintexupery.com
#
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU Lesser General Public
# License version 3 as published by the Free Software Foundation.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public License
# along with this program; if not, write to the Free Software Foundation,
# Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
from __future__ import annotations

import pytest

from gemseo.uncertainty.distribution.core.base_univariate_settings.triangular import (
    BaseTriangularDistributionSettings,
)
from gemseo.util.testing.helper import assert_exception


class SpecificTriangularDistribution_Settings(BaseTriangularDistributionSettings):  # noqa: N801
    pass


@pytest.mark.parametrize(
    ("minimum", "mode", "maximum"), [(1, 3, 2), (2, 1, 3), (3, 2, 1)]
)
def test_validator(minimum, mode, maximum, snapshot):
    """Test BaseTriangularDistributionSettings.__validate."""
    with assert_exception(ValueError, snapshot):
        SpecificTriangularDistribution_Settings(
            minimum=minimum, mode=mode, maximum=maximum
        )
